design-experiment-4.css
/* CREDITS TO .VOIDBBG FOR BUBBLES
AND OBSIDIANNINJA11 FOR SEARCHBAR */


.visual-refresh .panels_c48ade {
  bottom: 0px;
  left: 0px;
  width: calc(100% + 15px);
  border-radius: 0px;
  border: 0px;
  border-top: 1px solid var(--border-subtle);
  background: rgba(0, 0, 0, 0.001) !important;
  backdrop-filter: blur(20px);
  padding-bottom: 4px;
  padding-left: 6px;
  z-index: 200;

  >[class^="container_"] {
    padding: 0px;
    padding-right: ;
    margin: 0 8px;
    height: 57px;
  }
}


.visual-refresh body:has(.sidebar_c48ade[data-collapsed="true"]) .panels_c48ade {
  width: calc(100% - 1px);
}

.sidebar_c48ade {
  overflow: visible !important;
}

[data-list-item-id="guildsnav___home"]>div {
  background-color: rgba(255, 255, 255, 0.1);
}

ul[class^="content_"] {
  overflow: visible !important;
}

[style="height: 135px;"] {
  height: 0px !important;
}

[class^="layer_"]:has([class^="standardSidebarView_"]),
[class^="standardSidebarView_"] {
  background: rgba(0, 0, 0, 0) !important;
  backdrop-filter: blur(20px) brightness(50%);

  [class^="userInfo_"] {
    position: relative;
    top: -120px;
    height: 0px;

    [class*="avatar_"] {
      top: 0px !important;
    }
  }
}

#app-mount [class*="baseLayer_"] {
  opacity: 1 !important;
}

[class^="sidebarRegion_"] {
  max-width: 300px;
  background-color: rgba(0, 0, 0, 0) !important;

  >div {
    justify-content: flex-start;
    background-color: rgba(0, 0, 0, 0) !important;

    >nav {
      width: 300px;
      background-color: rgba(0, 0, 0, 0) !important;
    }
  }
}

[class^="contentColumn_"] {
  min-width: 0px;
  max-width: 100vw;
}

[class^="contentRegion"] {
  background: rgba(0, 0, 0, 0) !important;
}

.visual-refresh .sidebar_c48ade>[class*="guilds_"] {
  margin-bottom: 0px;
  padding-top: 32px;
  top: -32px;
  border-right: 1px solid var(--border-subtle);
  overflow: visible !important;
  z-index: 2;
  background-color: rgba(0, 0, 0, 0);
  height: calc(100% - 37px);

  [class^="stack_"] {
    padding-top: 32px;
    top: -32px;
  }

  [class^="itemsContainer_"] {
    background: rgba(0, 0, 0, 0) !important;
  }

  .unreadMentionsIndicatorBottom_ef3116 {
    margin-bottom: 32px;
  }
}


div:not(.imageContainer_ef9ae7)>.contentImage__42bf5 {
  left: 0px;
  position: absolute;
  z-index: -1;
  max-width: unset !important;
  width: 100% !important;
  height: 100% !important;
  filter: saturate(80%);
}

.container__0f2e8 {
  /* gradient */
  z-index: 0;
  overflow: hidden;
  background-color: black !important;
  margin-left: 0px;
  padding-left: 16px;
  height: 120px;
  border-radius: 0px 12px 12px 0px;

  &::after {
    z-index: -1;
    content: "";
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    right: 0px;
    left: 0px;
    background: linear-gradient(rgba(0, 0, 0, 0), rgba(34, 64, 122, 0.6)), linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, .7));
    background-blend-mode: screen, difference, ligthen;
    border-radius: 0px 0px 0 0;
  }

  .infoSection__0f2e8 {
    height: 100%;
    justify-content: end;
    z-index: 0;

    .contentTitle__0f2e8::before {
      opacity: 0.75;
      content: "played ";
      font-size: 12px;
    }

    * {
      text-shadow: 0px 0px 10px rgb(0, 0, 0);
      overflow: visible !important;
      z-index: 1;
    }

    svg>path {
      box-shadow: 0px 0px 10px rgb(0, 0, 0);
    }
  }

  /* username */
  .userName__0f2e8 {
    position: relative;
    left: 12px;
    top: 5px;
  }

  /* below username text */
  .contentTitle__0f2e8 {
    position: relative;
    font-size: 13px;
    width: 150px;
    white-space: wrap;
    bottom: 3px;
    left: 50px;
  }

  .facePile__0f2e8,
  .facePileItem__0f2e8,
  .facePileItem__0f2e8 div,
  .facePileItem__0f2e8 svg,
  .facePileItem__0f2e8 foreignObject {
    top: 3px;
    width: 23px !important;
    height: 23px !important;
    contain: none;
    align-self: center;
  }

  .userSection__0f2e8 {
    gap: 8px;
  }

  .badgesContainer__635ed {
    position: absolute;
    bottom: calc(100% - 16px - 16px);
    width: calc(100% - 16px - 8px);
    justify-content: flex-end;

    .badgeContainer__635ed {
      backdrop-filter: saturate(3) blur(20px);
      background-color: rgba(0, 0, 0, 0.25);
      border-radius: 8px;
      padding: 4px;

      svg path,
      [data-text-variant="text-xs/normal"] {
        text-shadow: none !important;
        color: #ffffff !important;
        fill: #ffffff !important;
      }
    }

    .badgeContainer__635ed:has([style*="color: var(--text-positive);"]) {
      background-color: var(--text-positive) !important;

      .tabularNumbers__4bd52 {
        color: #ffffff !important;
        text-shadow: none !important;
      }

      svg path {
        text-shadow: none !important;
        color: #ffffff !important;
        fill: #ffffff !important;
      }
    }

    .badgeContainer__635ed:has(path[fill="var(--status-positive)"]),
    .badgeContainer__635ed:has(path[d^="M4 12a8 8 0 0 1 14.93-4H15a1"]) {
      height: 16px !important;
      width: 16px;
      justify-content: center;

      .badgeLabel__635ed {
        display: none;

      }
    }
  }

}


.listItem__650eb:not(:has(.lowerBadge_cc5dd2)) .pill_e5445c:not(:has([style="opacity: 1; height: 40px; transform: none;"])) {
  width: 100%;
  justify-content: flex-end;
  z-index: 3;
  overflow: visible;
  pointer-events: none;

  span {
    border-radius: 100%;
    width: 8px;
    height: 8px !important;
    margin-right: 14.6px;
    margin-top: 28px;
    border: 5px solid var(--bg-base-tertiary);
    transition: all 0.25s;
  }
}
/* ... */

